SECURITY: Remove sensitive files and implement secure Google APIs integration
- Remove sensitive documents from Git tracking
- Implement complete Google APIs integration with secure environment loading
- Add Google Places API endpoints (search, details, nearby, find-place)
- Add Google Reviews API endpoint
- Add Google Maps Static API endpoint
- Add Google Geocoding API endpoints (forward and reverse)
- Create comprehensive Google APIs test dashboard with interactive map
- Add server-side API configuration endpoint for secure key management
- Implement proper environment variable handling with dotenv
- Fix TypeScript configuration and accessibility issues
- Add navigation integration for Google test route

Features:
 Google Maps Places Autocomplete widget
 Interactive map with markers and info windows
 Auto-population of form fields from selected places
 Comprehensive API testing interface
 Secure credential management
 Full responsive design

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,3 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "moduleResolution": "bundler",
-    "types": ["svelte", "node"],
-    "lib": ["ES2019", "DOM"],
-    "target": "ES2019",
-    "baseUrl": ".",
-    "paths": {
-      "$lib/*": ["src/lib/*"]
-    }
-  }
+  "extends": "./.svelte-kit/tsconfig.json"
 }
