--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "*",
     "better-sqlite3": "*",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "*",
     "lucide-svelte": "^0.427.0",
     "postcss": "*",
