Adds comprehensive documentation and configuration files
Creates detailed project documentation including technical reports and development plans

Establishes proper environment configuration with database credentials and API keys

Adds comprehensive gitignore rules to exclude sensitive files and development artifacts

Fixes TypeScript compilation issues with proper type assertions throughout database operations

Removes unused preview endpoint and improves code quality with better error handling

Enhances dashboard with real-time data fetching from actual database instead of mock data

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ node_modules
 .drizzle
 .svelte-kit
 .env.local
+Flex Living - dev assessment.md
+PROJECT_DEVELOPMENT_PLAN.md
 data/*.db-journal
+Flex Living - dev assessment.md
+.gitignore
