feat: Add realistic reviews data and enhance seeding process
- Introduced a new JSON file for realistic reviews to improve data quality.
- Updated the seeding script to generate and insert realistic reviews for specific properties.
- Enhanced the review generation logic with templates and randomized submission dates.
- Implemented a new amenities management system with categorized organization and icon mapping.
- Integrated Google Maps and Places API for improved property location context.
- Updated Svelte configuration for Vercel deployment with optimized settings.
- Added Vercel configuration file for environment variables and build commands.
- Improved navigation and sidebar functionality for better user experience.
- Added a new image asset for enhanced visual representation.

--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint .",
     "format": "prettier -w .",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx src/lib/db/seed.ts"
+    "db:seed": "tsx src/lib/db/seed.ts",
+    "vercel:build": "npm run build"
   },
   "dependencies": {
     "@skeletonlabs/skeleton": "*",
@@ -28,12 +29,13 @@
     "postcss": "*",
     "svelte": "*",
     "svelte-apexcharts": "^1.0.2",
-    "tailwindcss": "*",
+    "tailwindcss": "^3.4.17",
     "vite": "*"
   },
   "devDependencies": {
     "@skeletonlabs/tw-plugin": "*",
     "@sveltejs/adapter-auto": "*",
+    "@sveltejs/adapter-vercel": "^5.10.2",
     "@types/better-sqlite3": "*",
     "@types/node": "*",
     "drizzle-kit": "*",
