've completed generating comprehensive evidence-only documentation for your Flex Living Reviews Dashboard. Here's what I've created:
📁 Documentation Generated
Core Documentation
README.md - Master documentation index with complete overview
ARCHITECTURE.md - Detailed system architecture with diagrams
DATABASE.md - Complete database schema and relationships
ENVIRONMENT.md - Environment variables and configuration
API Documentation
README.md - Complete API overview with 42+ endpoints
reviews.md - Detailed review management API documentation
Frontend Documentation
README.md - All 65+ routes and pages documented
Integration Documentation
google.md - Complete Google APIs integration (8+ endpoints)
🔍 Key Findings from Code Analysis
Application Scale
42+ API endpoints across 8 functional domains
65+ frontend route files with comprehensive functionality
16 reusable Svelte components for UI consistency
3-table normalized database with proper relationships
Technology Stack Confirmed
SvelteKit with TypeScript for full-stack development
Turso (libsql) cloud database with local SQLite fallback
Drizzle ORM for type-safe database operations
Google APIs integration (Places, Maps, Geocoding)
Hostaway API integration with mock data fallback
Feature Coverage
✅ Multi-channel review aggregation (Airbnb, Booking.com, Direct, Google)
✅ Real-time analytics dashboard with KPIs and trends
✅ Property management with detailed insights
✅ Interactive Google Maps with place discovery
✅ CSV export functionality
✅ Comprehensive audit logging
✅ Batch review operations
✅ Responsive design with Tailwind CSS
Evidence-Only Approach
All documentation is derived directly from:

Source code analysis of actual files
Environment variable discovery from .env.local
Database schema from schema.ts
API endpoint enumeration from route files
Component inventory from components
Integration analysis from service files
The documentation provides complete visibility into your actual codebase without any assumptions or g

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx src/lib/db/seed.ts",
+  "db:seed": "tsx src/lib/db/seed.ts",
+  "turso:migrate": "tsx scripts/migrate-to-turso.ts",
     "vercel:build": "npm run build"
   },
   "dependencies": {
-    "@skeletonlabs/skeleton": "*",
+    "@skeletonlabs/skeleton": "2.11.0",
     "@sveltejs/kit": "*",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -28,12 +29,13 @@
     "lucide-svelte": "^0.427.0",
     "postcss": "*",
     "svelte": "*",
-    "svelte-apexcharts": "^1.0.2",
+  "svelte-apexcharts": "^1.0.2",
+  "@libsql/client": "*",
     "tailwindcss": "^3.4.17",
     "vite": "*"
   },
   "devDependencies": {
-    "@skeletonlabs/tw-plugin": "*",
+    "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-auto": "*",
     "@sveltejs/adapter-vercel": "^5.10.2",
     "@types/better-sqlite3": "*",
